--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
     <link rel="preload" as="image" href="/src/assets/hero_aktiscode2.webp" fetchpriority="high" />
     
     <!-- Font preload -->
-    <link rel="preload" as="font" type="font/woff2" href="https://fonts.gstatic.com/s/inter/v13/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiA.woff2" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
-    <!-- Preconnect to external domains -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body itemscope itemtype="https://schema.org/WebPage">
     <div id="root"></div>
